Updated the timestamps